--- a/style.css
+++ b/style.css
@@ -75,6 +75,7 @@ a:hover {
 .hamburger-menu {
     position: relative;
     display: inline-block;
+    z-index: 1;
 }
 
 .hamburger-icon {
@@ -97,12 +98,11 @@ a:hover {
     position: absolute;
     top: 100%;
     right: 0;
-    background-color: rgba(255, 255, 255, 0.308);
+    background-color: rgba(255, 255, 255);
     width: fit-content;
     max-height: 0;
     overflow: hidden;
-    transition: all;   
-    /* border: rgb(53, 53, 53) 0.1rem solid */
+    transition: all 0.3 ease-in-out;   
 }
 
 .menu-links a {
@@ -113,12 +113,10 @@ a:hover {
     color: black;
     text-decoration: none;
     transition: all 0.3 ease-in-out;
-    /* border: rgb(53, 53, 53) 0.1rem solid */
 }
 
 .menu-links li {
     list-style: none;
-    border: rgba(53, 53, 53, 0.103) 0.1rem solid
 }
 
 .menu-links.open {
@@ -287,10 +285,6 @@ section {
     display: flex;
 }
 
-.about-details-container .icon {
-    cursor: default;
-}
-
 .about-pic {
     border-radius: 2rem;
 }
@@ -389,3 +383,51 @@ article .icon {
 
 /* CONTACT */
 
+#contact {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    height: 70vh;
+}
+
+.contact-info-upper-container {
+    display: flex;
+    justify-content: center;
+    border-radius: 2rem;
+    border: rgb(53, 53, 53) 0.1rem solid;
+    border-color: rgb(163, 163, 163);
+    background: rgb(250, 250, 250);
+    margin: 2rem auto;
+    padding: 0.5rem;
+}
+
+.contact-info-container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 0.5rem;
+    margin: 1rem;
+}
+
+.contact-info-container p {
+    font-size: larger;
+}
+
+.contact-icon {
+    cursor: default;
+}
+
+.email-icon {
+    height: 2.5rem;
+}
+
+/* FOOTER */
+
+footer {
+    height: 26vh;
+    margin: 0 1rem;
+}
+
+footer p {
+    text-align: center;
+}
